Sustituir código deprecado