@@ -191,13 +191,13 @@ public class DoDelete extends AbstractMethod {
 
                 }
             } catch (AccessDeniedException e) {
-                errorList.put(path + children[i], new Integer(
+                errorList.put(path + children[i], Integer.valueOf(
                         WebdavStatus.SC_FORBIDDEN));
             } catch (ObjectNotFoundException e) {
-                errorList.put(path + children[i], new Integer(
+                errorList.put(path + children[i], Integer.valueOf(
                         WebdavStatus.SC_NOT_FOUND));
             } catch (WebdavException e) {
-                errorList.put(path + children[i], new Integer(
+                errorList.put(path + children[i], Integer.valueOf(
                         WebdavStatus.SC_INTERNAL_SERVER_ERROR));
             }
         }
