@@ -101,7 +101,7 @@ public class DoLock extends AbstractMethod {
             if (_userAgent != null && _userAgent.indexOf("Darwin") != -1) {
                 _macLockRequest = true;
 
-                String timeString = new Long(System.currentTimeMillis())
+                String timeString = Long.valueOf(System.currentTimeMillis())
                         .toString();
                 _lockOwner = _userAgent.concat(timeString);
             }
@@ -459,14 +459,14 @@ public class DoLock extends AbstractMethod {
                 lockDurationStr = lockDurationStr.substring(0, commaPos);
             }
             if (lockDurationStr.startsWith("Second-")) {
-                lockDuration = new Integer(lockDurationStr.substring(7))
+                lockDuration = Integer.valueOf(lockDurationStr.substring(7))
                         .intValue();
             } else {
                 if (lockDurationStr.equalsIgnoreCase("infinity")) {
                     lockDuration = MAX_TIMEOUT;
                 } else {
                     try {
-                        lockDuration = new Integer(lockDurationStr).intValue();
+                        lockDuration = Integer.valueOf(lockDurationStr).intValue();
                     } catch (NumberFormatException e) {
                         lockDuration = MAX_TIMEOUT;
                     }
